# file-pipe

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: celery_app.py  main.py
app/api/: api.py
app/api/endpoints/: authentication.py  tasks.py
app/core/: config.py
app/models/: task_models.py
app/security/: auth.py
app/services/: celery_service.py
app/tasks/: background_tasks.py
